--- a/cv/index.html
+++ b/cv/index.html
@@ -451,7 +451,7 @@ Embedded systems and computer programming<br/>Robotics <br/>Web designing<br/>Di
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <form id="contact" action="https://wa.link/fbua0m" method="get">
+                        <form id="contact" action="" method="post">
                             <div class="row">
                                 <div class="col-md-12">
                                   <fieldset>
