--- a/cv/index.html
+++ b/cv/index.html
@@ -494,7 +494,7 @@ Embedded systems and computer programming<br/>Robotics <br/>Web designing<br/>Di
 
         <div class="footer">
           <div class="content">
-              <p>Copyright &copy; 2020 AMMAR ABDULLAH: <a rel="nofollow" href="write your link">ABMR</a></p>
+              <p>Copyright &copy; 2020 AMMAR ABDULLAH: <a rel="nofollow" href="https://ammar17bec059.github.io/ammar/cv/index.html">ABMR</a></p>
           </div>
         </div>
 
