--- a/cv/index.html
+++ b/cv/index.html
@@ -93,7 +93,7 @@ Embedded systems and computer programming<br/>Robotics <br/>Web designing<br/>Di
 
                             <!-- table -->
                             <p>PERSONAL PROFILE:</p>
-                            <table  border="1">
+                             <table class="table table-bordered table-hover">
                             <tr><td>Date of Birth & Age </td> <td> 01th January 1998 & 22</td></tr>
                             <tr><td >Father’s name & occupation</td> <td> Abdullah Murshed & Police man  </td> </tr>
                             <tr><td>Nationalit </td> <td> Yemeni</td> </tr>
