--- a/cv/index.html
+++ b/cv/index.html
@@ -266,7 +266,7 @@ Embedded systems and computer programming<br/>Robotics <br/>Web designing<br/>Di
                                         <div class="hover-content">
                                           <h2>AWS Computer Vision:getting start with GluonCV</h2>
                                         <ul>  <li>by Amazon Web Service</li><br/><li> offered through Coursera</li></ul>
-                                                  <a href="https://www.coursera.org/account/accomplishments/certificate/GUYPNPAXUXR6" target="_blank">Certificate chick later</a>
+                                                  <a href="https://www.coursera.org/account/accomplishments/certificate/B3GKUS63Q7Y2" target="_blank">Certificate chick later</a>
 
                                         </div>
                                     </div></a>
@@ -315,12 +315,28 @@ Embedded systems and computer programming<br/>Robotics <br/>Web designing<br/>Di
                                         <div class="hover-content">
                                           <h2>Intractivity with Javascript</h2>
                                         <ul>  <li>by University of Michigan </li><br/><li> offered through Coursera</li></ul>
-                                        <a href="https://www.coursera.org/account/accomplishments/certificate/LDT855GUBAKP" target="_blank">Certificate chick later</a>
+                                        <a href="https://www.coursera.org/account/accomplishments/certificate/A72HC2JZ35L8" target="_blank">Certificate chick later</a>
 
                                         </div>
                                     </div></a>
                                     <div class="image">
                                         <img src="img/javascript.jpg">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+			    <div class="col-md-4 col-sm-6">
+                            <div class="item">
+                                <div class="thumb">
+                                    <a href="img/Badvance_styling.png" data-lightbox="image-1"><div class="hover-effect">
+                                        <div class="hover-content">
+                                            <h2>Advanced Styling with Responsive Design</h2>
+                                          <ul>  <li>by University of Michigan </li><br/><li> offered through Coursera</li></ul>
+                                          <a href="https://www.coursera.org/account/accomplishments/certificate/WXW4E6ZRAPWC" target="_blank">Certificate</a>
+                                        </div>
+                                    </div></a>
+                                    <div class="image">
+                                        <img src="img/advance_styling.png">
                                     </div>
                                 </div>
                             </div>
