--- a/cv/index.html
+++ b/cv/index.html
@@ -57,7 +57,7 @@ https://templatemo.com/tm-512-moonlight
             <div class="content first-content">
               <div class="container-fluid">
                   <div class="col-md-3">
-                      <div class="author-image"><img src="img/ammar.jpg" alt="Ammar Image"></div>
+                      <div class="author-image"><img src="img/about.jpg" alt="Ammar Image"></div>
                   </div>
                   <div class="col-md-9">
                       <h2>CAREER OBJECTIVE:</h2>
