--- a/cv/index.html
+++ b/cv/index.html
@@ -145,8 +145,7 @@ Embedded systems and computer programming<br/>Robotics <br/>Web designing<br/>Di
                                         <div class="col-md-6">
                                             <div class="left-image">
                                                 <img src="img/miproject.jpg" alt="mini project">
-                                                  <img src="img/python_project.jpg" alt="mini project">
-                                                    <img src="img/oproject.jpg" alt="mini project">
+                                                 
 
                                             </div>
                                         </div>
@@ -154,8 +153,8 @@ Embedded systems and computer programming<br/>Robotics <br/>Web designing<br/>Di
                                             <div class="right-content">
                                                 <h2>MINI PROJECTS:</h2>
                                                 <h2>Project #1: <p> (B.Sc. Level) – OLED Temperature Display with RTC</P></h2>
-                                                    <h2>Project #2: <p>(coursera-online-Capstone) – Retrieving, Processing, and Visualizing Data with Python</P></h2>
-                                                        <h2>Project #3: <p> (coursera-online- Project) –IOT based Security System with Voice Message </P></h2>
+                                                    <h2>Project #2: <p>(coursera-online-Capstone) – Retrieving, Processing, and Visualizing Data with Python<br/><a href="https://www.coursera.org/account/accomplishments/certificate/UFEJV2BKRYDN" target="_blank">Certificate With Honors</a></P></h2>
+                                                        <h2>Project #3: <p> (coursera-online- Project) –IOT based Security System with Voice Message<br/><a href="https://www.coursera.org/account/accomplishments/certificate/FBPH2FBH66FN" target="_blank">Certificate</a> </P></h2>
 
 
                                                 <div class="main-btn"><a href="#4">Continue Reading</a></div>
