--- a/cv/index.html
+++ b/cv/index.html
@@ -4,10 +4,6 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>ABMR</title>
-<!--
-Moonlight Template
-https://templatemo.com/tm-512-moonlight
--->
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -85,7 +81,7 @@ https://templatemo.com/tm-512-moonlight
                               <p> OPERATING SYSTEM:<br/>Windows (XP, 7, 8.1,10), Linux (ubuntu, Raspbian)</p>
 
                              <p>FIELD OF INTEREST:<br/>
-Embedded systems and computer programming<br/>Robotics <br/>Web designing<br/>Digital Electronics<br/>Computer Vision<br/>Machine Learning </P>
+Embedded systems and computer programming<br/>Robotics <br/>ASIC design<br/>Web designing<br/>IoT<br/>Computer Vision<br/>Machine Learning </P>
 
 
                              <P>PERSONAL STRENGTH:<br/>
@@ -93,7 +89,7 @@ Embedded systems and computer programming<br/>Robotics <br/>Web designing<br/>Di
 
                             <!-- table -->
                             <p>PERSONAL PROFILE:</p>
-                             <table class="table table-bordered table-hover">
+                            <table class="table table-bordered table-hover">
                             <tr><td>Date of Birth & Age </td> <td> 01th January 1998 & 22</td></tr>
                             <tr><td >Father’s name & occupation</td> <td> Abdullah Murshed & Police man  </td> </tr>
                             <tr><td>Nationalit </td> <td> Yemeni</td> </tr>
@@ -145,7 +141,10 @@ Embedded systems and computer programming<br/>Robotics <br/>Web designing<br/>Di
                                         <div class="col-md-6">
                                             <div class="left-image">
                                                 <img src="img/miproject.jpg" alt="mini project">
-                                                 
+
+                                                  <img src="img/oproject.jpg" alt="mini project">
+                                                  <img src="img/ccproject.png" alt="mini project">
+
 
                                             </div>
                                         </div>
@@ -155,6 +154,7 @@ Embedded systems and computer programming<br/>Robotics <br/>Web designing<br/>Di
                                                 <h2>Project #1: <p> (B.Sc. Level) – OLED Temperature Display with RTC</P></h2>
                                                     <h2>Project #2: <p>(coursera-online-Capstone) – Retrieving, Processing, and Visualizing Data with Python<br/><a href="https://www.coursera.org/account/accomplishments/certificate/UFEJV2BKRYDN" target="_blank">Certificate With Honors</a></P></h2>
                                                         <h2>Project #3: <p> (coursera-online- Project) –IOT based Security System with Voice Message<br/><a href="https://www.coursera.org/account/accomplishments/certificate/FBPH2FBH66FN" target="_blank">Certificate</a> </P></h2>
+                                                            <h2>Project #4: <p> (coursera-online- Project) –Web Design Capstone<br/><a href="https://www.coursera.org/account/accomplishments/certificate/NAHLE76V2FUX" target="_blank">Certificate</a> </P></h2>
 
 
                                                 <div class="main-btn"><a href="#4">Continue Reading</a></div>
@@ -240,6 +240,49 @@ Embedded systems and computer programming<br/>Robotics <br/>Web designing<br/>Di
                                 </div>
                             </div>
                         </div>
+
+
+<!--here-->
+                        <div class="col-md-4 col-sm-6">
+                            <div class="item">
+                                <div class="thumb">
+                                    <a href="img/Bweb.jpg" data-lightbox="image-1"><div class="hover-effect" class="imgq">
+                                        <div class="hover-content">
+                                            <h2>Web Design for Everybod Specialization</h2>
+                                            <ul>
+                                            <li>Introduction to HTML5</li>
+                                              <li>Introduction to CSS3 </li>
+                                                <li>Interactivity with JavaScript </li>
+                                                <li>Advanced Styling with Responsive Design </li>
+                                                <li>Web Design for Everybody Capstone</li>
+                                            </ul>
+                                            <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/KQ7Q6XVD8VHP" target="_blank">Certificate</a>
+                                        </div>
+                                    </div></a>
+                                    <div class="image">
+                                        <img  src="img/web.jpg">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 col-sm-6">
+                            <div class="item">
+                                <div class="thumb">
+                                    <a href="img/Bwphp.jpg" data-lightbox="image-1"><div class="hover-effect">
+                                        <div class="hover-content">
+                                          <h2>Building Web Applications in PHP</h2>
+                                        <ul>  <li>by University of Michigan </li><br/><li> offered through Coursera</li></ul>
+                                        <a href="https://www.coursera.org/account/accomplishments/certificate/6ZYEFQKXZ2NV" target="_blank">Certificate</a>
+                                        </div>
+                                    </div></a>
+                                    <div class="image">
+                                        <img src="img/wphp.jpg">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="col-md-4 col-sm-6">
                             <div class="item">
                                 <div class="thumb">
@@ -265,7 +308,7 @@ Embedded systems and computer programming<br/>Robotics <br/>Web designing<br/>Di
                                         <div class="hover-content">
                                           <h2>AWS Computer Vision:getting start with GluonCV</h2>
                                         <ul>  <li>by Amazon Web Service</li><br/><li> offered through Coursera</li></ul>
-                                                  <a href="https://www.coursera.org/account/accomplishments/certificate/B3GKUS63Q7Y2" target="_blank">Certificate chick later</a>
+                                                  <a href="https://www.coursera.org/account/accomplishments/certificate/B3GKUS63Q7Y2" target="_blank">Certificate</a>
 
                                         </div>
                                     </div></a>
@@ -275,71 +318,8 @@ Embedded systems and computer programming<br/>Robotics <br/>Web designing<br/>Di
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-6">
-                            <div class="item">
-                                <div class="thumb">
-                                    <a href="img/Bhtml5.jpg" data-lightbox="image-1"><div class="hover-effect">
-                                        <div class="hover-content">
-                                          <h2>Introduction to HTML5</h2>
-                                        <ul>  <li>by University of Michigan </li><br/><li> offered through Coursera</li></ul>
-                                              <a href="https://www.coursera.org/account/accomplishments/certificate/LDT855GUBAKP" target="_blank">Certificate</a>
-                                        </div>
-                                    </div></a>
-                                    <div class="image">
-                                        <img src="img/html5.jpg">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-6">
-                            <div class="item">
-                                <div class="thumb">
-                                    <a href="img/Bcss3.jpg" data-lightbox="image-1"><div class="hover-effect">
-                                        <div class="hover-content">
-                                            <h2>Introduction to CSS3</h2>
-                                          <ul>  <li>by University of Michigan </li><br/><li> offered through Coursera</li></ul>
-                                          <a href="https://www.coursera.org/account/accomplishments/certificate/478V8DJ5GHJC" target="_blank">Certificate</a>
-                                        </div>
-                                    </div></a>
-                                    <div class="image">
-                                        <img src="img/css3.jpg">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-6">
-                            <div class="item">
-                                <div class="thumb">
-                                    <a href="img/Bjavascript.jpg" data-lightbox="image-1"><div class="hover-effect">
-                                        <div class="hover-content">
-                                          <h2>Intractivity with Javascript</h2>
-                                        <ul>  <li>by University of Michigan </li><br/><li> offered through Coursera</li></ul>
-                                        <a href="https://www.coursera.org/account/accomplishments/certificate/A72HC2JZ35L8" target="_blank">Certificate chick later</a>
 
-                                        </div>
-                                    </div></a>
-                                    <div class="image">
-                                        <img src="img/javascript.jpg">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-			    <div class="col-md-4 col-sm-6">
-                            <div class="item">
-                                <div class="thumb">
-                                    <a href="img/Badvance_styling.png" data-lightbox="image-1"><div class="hover-effect">
-                                        <div class="hover-content">
-                                            <h2>Advanced Styling with Responsive Design</h2>
-                                          <ul>  <li>by University of Michigan </li><br/><li> offered through Coursera</li></ul>
-                                          <a href="https://www.coursera.org/account/accomplishments/certificate/WXW4E6ZRAPWC" target="_blank">Certificate</a>
-                                        </div>
-                                    </div></a>
-                                    <div class="image">
-                                        <img src="img/advance_styling.png">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+
                         <div class="col-md-4 col-sm-6">
                             <div class="item">
                                 <div class="thumb">
@@ -492,7 +472,8 @@ Embedded systems and computer programming<br/>Robotics <br/>Web designing<br/>Di
                                   <fieldset>
                                     <button type="submit" id="form-submit" class="btn">Send Now</button>
                                   </fieldset>
-                                  
+
+
 
 
                                 </div>
@@ -509,7 +490,7 @@ Embedded systems and computer programming<br/>Robotics <br/>Web designing<br/>Di
 
         <div class="footer">
           <div class="content">
-              <p>Copyright &copy; 2020 AMMAR ABDULLAH: <a rel="nofollow" href="https://ammar17bec059.github.io/ammar/cv/index.html">ABMR</a></p>
+              <p>Copyright &copy; 2020 AMMAR ABDULLAH: <a rel="nofollow" href="write your link">ABMR</a></p>
           </div>
         </div>
 
